k8s-prod-ready-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samples-http
  labels:
    app: hellogo
    namespace: bribe-by-bytes
spec:
  # High Availability
  replicas: 3
  selector:
    matchLabels:
      app: hellogo
  template:
    metadata:
      labels:
        app: hellogo
    spec:
      # Hardened Security
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      # High Availability
      # To know more refer:
      # https://youtu.be/Q0F2vSfxLek
      # https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#affinity-and-anti-affinity
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - hellogo
            topologyKey: "kubernetes.io/hostname"    
      volumes:
        - name: rootca
          configMap:
            name: root-ca
            items:
              - key: cacert.crt
                path: cacert.crt
        - name: app-config
          configMap:
            name: samples-http-cm
            items:
            - key: app.properties
              path: app.properties
            - key: user.properties
              path: user.properties
        - name: app-env
          secret:
            secretName: samples-http-secret
            items:
            - key: .env
              path: .env
      containers:
        - name: hellogo
          image: bribebybytes/hellogo:1.0.0
          # Hardened Security
          imagePullPolicy: Always
          # Graceful Shutdown minimizing request failures  
          lifecycle:
            preStop:
              exec:
                command: ["sh","-c","sleep 5"]
          ports:
          - name: hellogo
            containerPort: 8080
          # Setting Requests and Limits allows to use compute resources efficiently. 
          # Tune them what is needed for your app, do NOT waste resources
          # Requests - Min/guaranteed resource allocated to container. To set, stress test sending expected traffic in prod. 
          # Ideally this allocation should be able to handle avg. traffic expected by your app
          # Limits - Max/upper limit(Not allocated/blocked) upto which the container can utilize if it's in need of resource. 
          # This value should account for any peak traffic your app may encounter
          resources:
            limits:
              memory: "500Mi"
              cpu: "200m"
            requests:
              memory: "100Mi"
              cpu: "100m"
          # Liveness and Readiness Probes
          # high availability and resiliency    
          # To know more refer: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              httpHeaders:
              - name: Custom-Header
                value: Awesome
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
              - cat
              - /usr/app/secrets/.env
            initialDelaySeconds: 5
            periodSeconds: 10
          # Define the environment variable
            # Notice that the case is different here
            # from the key name in the ConfigMap.
          volumeMounts:
          - name: app-config
            mountPath: "/config"
            readOnly: true
          - name: app-env
            mountPath: "/usr/app/secrets"
            readOnly: true
          - name: rootca
            mountPath: /etc/ssl/certs
# Uncomment the following if you are pulling from a private container registry
# and you need to pass the secret name containing registry credential            
#     imagePullSecrets:
#       - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: samples-http
  namespace: bribe-by-bytes
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hellogo
# Uncomment to enable "LoadBalancer" type service if your k8s cluster is on public cloud
# which supports external load balancers    
#  type: LoadBalancer  
---
# Comment the "Ingress" block of spec if you have enabled "LoadBalancer" type service above.
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: samples-http
  namespace: bribe-by-bytes
  annotations:
    # Update the ingress class to whatever your Ingress Controller class.
    # Example here I am using "traefik" ingress controller. Yours could be Nginx Ingress controller
    # or something else.
    kubernetes.io/ingress.class: "traefik"
spec:
  # Uncomment the following when you have TLS enabled hostname
  # tls:
    # - hosts:
        # - hello-bribe-by-bytes.example.com
  rules:
  # Uncomment following to specify hostname if you have DNS setup and have a hostname
  # - host: hello-bribe-by-bytes.example.com
  - http:
      paths:
        - path: /
          backend:
            serviceName: samples-http
            servicePort: http
---
